data/derived/comb/progs/unify/prog4557.ml.out
Characters 505-506:
  | Special1 (var11, var12) -> (sin(pi*.(eval(var11, x, y))) *. cos(pi*.(eval(var12, x, y))))/.2;;
                                                                                               ^
Error: This expression has type int but an expression was expected of type
         float
